# blog2

./: .gitignore  GEMINI.md  README.md  blog.py  blogger.py  explore.ipynb  generate_toc.ipynb  pyproject.toml  repro_issue.py  repro_issue_fixed.py  spells.yml  ui.py  utils.py  words.yml
.gemini/: html_table_to_list_table.toml
.github/workflows/: deploy.yml
.idx/: dev.nix
blog/: blogger.py  utils.py
docs/: .gitignore  index.md  myst.yml  tags.md  toc.yml
docs/articles/2010/05/best-strategy/: index.md
docs/articles/2010/05/first-10-digit-prime-in-consecutive-digits-of-euler-constant/: index.md
docs/articles/2010/05/first-10-digit-prime-in-consecutive-digits-of-euler-constant-/: index.md
docs/articles/2010/05/first-10-digit-prime-in-consecutive-digits-of-euler-constant?/: index.md
docs/articles/2010/05/first-prime/: index.md
docs/articles/2010/05/generating-functions/: index.md
docs/articles/2010/05/how-long-does-it-take-to-observe-a-sequence/: index.md
docs/articles/2010/05/how-long-does-it-take-to-observe-a-sequence-/: index.md
docs/articles/2010/05/how-long-does-it-take-to-observe-a-sequence?/: index.md
docs/articles/2010/05/how-long-observe-pattern/: index.md
docs/articles/2010/05/inverse-of-a-special-class-of-matrices-with-high-dimensions/: index.md
docs/articles/2010/05/inverse-of-matrix/: index.md
docs/articles/2010/05/sun-bin-pang-juan/: index.md
docs/articles/2010/05/sun-bin-pk-pang-juan/: index.md
docs/articles/2010/05/the-power-of-generating-functions/: index.md
docs/articles/2010/05/which-one-is-the-best-strategy/: index.md
docs/articles/2010/05/which-one-is-the-best-strategy-/: index.md
docs/articles/2010/05/which-one-is-the-best-strategy?/: index.md
docs/articles/2011/08/tips-for-vb-vb.net/: index.md
docs/articles/2011/08/tips-for-vb-vb.net.net/: index.md
docs/articles/2011/08/tips-vb.net/: index.md
docs/articles/2011/12/a-bug-in-mathematica/: index.md
docs/articles/2011/12/bug-in-mathematica/: index.md
docs/articles/2012/04/install-software-linux/: index.md
docs/articles/2012/04/permission-issues-when-installing-softwares-in-linux/: index.md
docs/articles/2012/05/abuse-of-vector-in-r/: index.md
docs/articles/2012/05/abuse-vector-r/: index.md
docs/articles/2012/05/bessel-first-property/: index.md
prompts/: add_spells_tag.md  update_title.md
spells/: spells_tag.yml  spells_title.yml
tests/: test_utils.py
trash/: index.md
trash/enhance-browsing-experience-using-scriptcat/: index.md
trash/tips-on-tampermoney-and-greasy-fork/: index.md
(+2981 files in other folders)
