[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "blog"
version = "0.1.0"
description = "Personal Blogging System Based on Jupyter Book 2"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "loguru>=0.7.3",
  "nbformat>=5.10.4",
  "pyyaml>=6.0.3",
  "requests>=2.33.1",
  "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "jupyter-book>=2.1",
  "mdformat>=1",
  "mdformat-beautysh>=1.0.0",
  "mdformat-myst>=0.3",
  "pyproject-fmt>=2.21.1",
  "pytest>=9.0.2",
  "ruff>=0.15.8",
  "ty>=0.0.27",
]

[tool.ruff]
exclude = [
  "*.ipynb",
  "docs/",
]

[tool.deptry]
extend_exclude = [
  "docs/",
]

[tool.ty]
src.exclude = [
  "**/*.ipynb",
]

[tool.pytest]
ini_options.norecursedirs = [
  "dist",
  "build",
  ".tox",
  "venv",
  ".venv",
  "node_modules",
  "legacy_tests",
  "docs",
]
